JumpScript/tests/baselines/reference/YieldExpression2_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression2_es6.jump(1,1): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression2_es6.jump (1 errors) ====
    yield foo;
    ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.